apps/example/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels: { app: example-app }
spec:
  selector: { app: example-app }
  ports:
  - name: web
    port: 8080
    targetPort: web
